[#2280570] Javadocs and tech debt reduction